[package]
name = "hplt-to-wet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
walkdir = "2.4.0"
warc = { version = "0.3.1", features = ["gzip"] }
zstd = "0.13.0"
rayon = "1.8"
